@@ -36,7 +36,6 @@ POSSIBILITY OF SUCH DAMAGE.
 
 int _mosquitto_packet_alloc(struct _mosquitto_packet *packet);
 void _mosquitto_check_keepalive(struct mosquitto *mosq);
-int _mosquitto_fix_sub_topic(char **subtopic);
 uint16_t _mosquitto_mid_generate(struct mosquitto *mosq);
 int _mosquitto_topic_wildcard_len_check(const char *str);
 FILE *_mosquitto_fopen(const char *path, const char *mode);
