@@ -469,11 +469,6 @@ int mqtt3_handle_subscribe(struct mosquitto_db *db, struct mosquitto *context)
 				if(payload) _mosquitto_free(payload);
 				return 1;
 			}
-			if(_mosquitto_fix_sub_topic(&sub)){
-				_mosquitto_free(sub);
-				if(payload) _mosquitto_free(payload);
-				return 1;
-			}
 			if(!strlen(sub)){
 				_mosquitto_log_printf(NULL, MOSQ_LOG_INFO, "Empty subscription string from %s, disconnecting.",
 					context->address);
